wip landing page

--- a/style2.css
+++ b/style2.css
@@ -276,6 +276,7 @@ p {
         padding: 2%;
         background-color: #D9D9D9;
         border-radius: 10px;
+        margin-bottom: 15px;
     }
 
     .cardMobile span {
