--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     margin: 0%;
     padding: 0%;
     text-decoration: none;
