--- a/enterpriseCards.css
+++ b/enterpriseCards.css
@@ -5,6 +5,11 @@ section {
     align-items: center;
   }
 
+  .card_services_general_info{
+    display: flex;
+    justify-content: space-between;
+  }
+
   #card_services_container {
     max-width: 400px;
     border: 1px solid #ccc;
@@ -20,16 +25,23 @@ section {
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+    margin-bottom: 15px;
 }
 
 .card_services_profile_container {
+    width: 40%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 10px;
 }
 
 .card_services_profile_container div {
     margin-left: 10px;
+}
+
+.card_services_profile_container p{
+    line-height: 2px;
 }
 
   /* Estilos para la ubicación */
@@ -42,12 +54,28 @@ section {
   /* Estilos para las grandes familias (checkboxes) */
 .card_services_checbox_container {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin: 20px 0;
 }
   /* Estilos para el área de texto descriptivo */
+
+.card_services_description_container{
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+
+}
 p {
     margin: 10px 0;
+}
+
+  /* Estilos para el contenedor likes y boton */
+
+.card_services_likes_container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
   /* Estilos para el icono de corazón */
