--- a/services.css
+++ b/services.css
@@ -192,30 +192,25 @@ p {
   padding-bottom: 10px;
 }
 
-body {
-  font-family: Arial, sans-serif;
-}
-
 .post {
   margin-bottom: 10px;
 }
 
 .like-button {
-  background-color: #007bff;
-  color: #fff;
-  padding: 5px 10px;
+  width: 70px;
+  height: 70px;
+  background-color: transparent;
   border: none;
+  padding: 0;
   cursor: pointer;
   display: flex;
   align-items: center;
+  
 }
 
-.like-button .icon {
-  margin-right: 5px;
-}
-
-.like-button.liked {
-  background-color: #28a745;
+.like-button.liked .icon {
+  color: #ff0000;
+  font-size: 67px;
 }
 
 .notifications {
@@ -227,7 +222,18 @@ body {
 .notifications h2 {
   margin-top: 0;
 }
-.logoFavorito{
-  width: 20px;
-  height: 20px;
+
+.icon{
+  width: 70px;
+  height: 70px;
+}
+
+.like-button .icon {
+  font-size: 67px;
+  color: #000;
+  transition: color 0.3s;
+}
+
+.like-button.liked .icon {
+  color: #ff0000;
 }
