--- a/styles/somos.css
+++ b/styles/somos.css
@@ -7,14 +7,14 @@
 
 #somos-imgs img{
     width: 0;
-    flex-grow: 1;
+    flex-grow: 0.5;
     object-fit: cover;
     opacity: 0.8;
     transition: .5s ease;
 }
 
 #somos-imgs img:hover{
-    width: 300px;
+    width: 20vw;
     opacity: 1;
     filter: contrast(120%);
 }
