--- a/styles/global.css
+++ b/styles/global.css
@@ -4,12 +4,33 @@
     color:var(--text-color);
     padding:0;
     margin:0;
+    font-size: 1rem;
 }
+
+body{
+    max-width: 1024px;
+}
+
 h1{
     font-size: 2rem;
     color:var(--color-azul)
 }
+
 h2{
-    font-size: 1rem;
+    width:100%;
+    text-align: center;
+    font-size: 1.2rem;
     color:var(--color-rosa)
+}
+
+h3{
+    font-size: 0.8rem;
+    color:var(--color-yellow)
+}
+
+input {
+    border-radius: 50px;
+    border: 1px solid #000;
+    background: #FFF;
+    box-shadow: 1px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
