--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,9 @@
     --body-bg-color: white;
     --text-color:black ;
     --color-rosa: #ED117F;
-    --color-azul: #4DA3DF;
+    --color-azul: #4695ca;
     --color-amarillo: #FFBD59;
     --main-font:  "Lato", sans-serif;
-}
+    --color-gris-oscuro: #373737;
+    --color-gris-claro: #C3C3C3;
+} 
