--- a/styles/services.css
+++ b/styles/services.css
@@ -1,5 +1,5 @@
 
-/*SEARCH*/
+  /*SEARCH*/
 .services_search_container{
   display: flex;
   flex-direction: column;
@@ -149,12 +149,12 @@ p {
 
 /*QUERIES*/
 
-/* Estilos para dispositivos de tablet con anchura mínima de 1024px */
+/* Estilos para dispositivos de tablet con anchura mínima de 1024px
 @media (min-width: 768px) {
   .services_container{
     display: flex;
   }
-}
+} */
 /* Estilos para dispositivos de escritorio con anchura mínima de 1024px */
 @media (min-width: 1024px) {
   
