--- a/styles/global.css
+++ b/styles/global.css
@@ -5,10 +5,12 @@
     padding:0;
     margin:0;
     font-size: 1rem;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
 body{
-    max-width: 1024px;
+    width: 100%;
 }
 
 h1{
