--- a/styles/header.css
+++ b/styles/header.css
@@ -1,42 +1,21 @@
+
 nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 5%;
+    width:100%;
     height: 150px;
-}
-
-nav ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #d9d9d9;
-    top: 150px;
-    left: 100%;
-    text-align: center;
-    transition: all .5s;
-}
-
-nav ul li {
-    display: block;
-    margin-top: 10%;
-    padding-bottom: 10%;
-}
-
-nav ul li a {
-    font-size: 1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hamburguesa {
     width: 32px;
     height: 32px; 
-    margin-right: 10px;
+    margin: 20px;
 }
 
 .logo {
     border-radius: 100px;
-    margin-right: 60px;
+    width: 120px;
+    height: 120px;
+    margin: 20px;
 }
