--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,33 @@
+/*--------------Estilos generales--------------*/
+
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    background-color: #D7C2C2;
+}
+
+p {
+    font-size: 1rem;
+    line-height: 2rem;
+    text-align: left;
+}
+
+.footer-ezquierda img {
+    width: 100px;
+    border-radius: 100%;
+    margin-top: 2%;
+}
+
+.footer-menu {
+    text-decoration: underline;
+    line-height: 2rem;
+}	
+
 
 
 #check {
@@ -5,11 +35,25 @@
 }
 
 /*MOVIL*/
-
-
     /*----------MENU MOVIL--------- */
 
-  
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 5%;
+        height: 150px;
+    }
+
+    .logo {
+        border-radius: 100px;
+        margin-right: 60px;
+    }
+
+    .hamburguesa {
+        width: 50px;
+        height: 50px;
+    }
 
     label.checkbtn {
         display: flex;
@@ -40,8 +84,6 @@
         text-transform: uppercase;
         color: black;
     }
-
-   
 
     #check:checked~ul {
         left: 0;
