--- a/styles/somos.css
+++ b/styles/somos.css
@@ -1,4 +1,13 @@
+#somos-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+} 
+
 #somos-imgs{
+    width: 90vw;
     display: flex;
     margin: 0 auto;
 }
@@ -15,4 +24,12 @@
     width: 10vw;
     opacity: 1;
     filter: contrast(120%);
+}
+
+.box {
+    width: 90%;
+    border:1px solid var(--color-gris-oscuro);
+    border-radius: 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 25px;
 }
