--- a/contactanos.css
+++ b/contactanos.css
@@ -44,3 +44,20 @@ button[type="submit"] {
     margin-top: 10px;
     cursor: pointer;
 }
+@media (max-width: 768px) {
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .title {
+      text-align: left;
+    }
+  
+    #contactForm {
+      width: 80%;
+      max-width: 400px;
+    }
+  }
+  
