--- a/styles/index.css
+++ b/styles/index.css
@@ -1,71 +1,15 @@
 /*--------------Estilos generales--------------*/
 
-#check {
-    display: none;
-}
-
-
-    nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        padding: 5%;
-    }
-
-
-
-    .logo {
-      width: 60px;
-      
-        border-radius: 100px;
-        margin-right: 60px;
-    }
-
-    .hamburguesa {
-        width: 50px;
-        height: 50px;
-        position: absolute;
-        margin-left: 70px;
-        margin-top: -35px;
-    }
-
-    label.checkbtn {
-        display: flex;
-        margin: auto;
-        padding: auto;
-    }
-    
-    nav ul {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #d9d9d9;
-        top: 150px;
-        left: 100%;
-        text-align: center;
-        transition: all .5s;
-        z-index: 100;
-    }
-
-    nav ul li {
-        display: block;
-        margin-top: 10%;
-        padding-bottom: 10%;
-    }
-
-    nav ul li a {
-        font-size: 1rem;
-        text-decoration: none;
-        text-transform: uppercase;
-        color: black;
-    }
     .search-container{
+      width: fit-content;
       margin: 20px auto;
     }
-
-    #check:checked~ul {
-        left: 0;
+    #keyword{
+      width: 300px;
+      height: 40px;
     }
+
+    
 
     p.author a {
         text-decoration: none;
@@ -116,7 +60,7 @@
 
   .carousel {
     display: flex;
-    transition: transform 0.5s ease;
+    transition: transform 1s ease;
     z-index: -100;
   }
 
@@ -126,6 +70,7 @@
   }
   
   /*SEARCH*/
+  
   .services_search {
     width: 90%; 
     max-width: 500px;
