--- a/styles/contactanos.css
+++ b/styles/contactanos.css
@@ -32,6 +32,10 @@
       padding: 10px;
       margin-top: 10px;
       cursor: pointer;
+      background-color: var(--color-rosa);
+      color: var(--body-bg-color);
+      border-radius: 8px;
+      font-weight: bold;
   }
   @media (max-width: 768px) {
       .container {
