--- a/styles/services.css
+++ b/styles/services.css
@@ -5,17 +5,24 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 50px auto;
+  margin: 10px auto 40px;
 }
 
 .services_search {
   width: 90%; 
   max-width: 500px;
-  margin: 40px 0; 
+  margin: 20px 0; 
   padding: 10px; 
   border: 1px solid #ccc; 
   border-radius: 20px;
   font-size: 16px; 
+}
+.service-filters{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  padding: 20px;
 }
 
 /*CARD*/
@@ -136,7 +143,7 @@ p {
     font-weight: 500;
     background-color: var(--color-azul);
     color: var(--body-bg-color);
-    padding: 3px;
+    padding: 10px 20px;
     border-radius: 4px;
   }
 
